@@ -219,6 +219,13 @@ HOSTNAME	= ldap
 BASE_DN		= ou=People,dc=mydomain,dc=com
 
 # 
+# If your LDAP library supports ldap_initialize(), then you can use the
+# alternative LDAP server DSN like following.
+#
+# URI		= ldap://127.0.0.1:389
+# URI		= ldapi://%2fvar%2frun%2fopenldap%2fldapi/
+
+# 
 # Leave blank for anonymous bind.
 # example: cn=admin,dc=mydomain,dc=com     
 #
